--- a/src/styles/HomeContent.css
+++ b/src/styles/HomeContent.css
@@ -1,3 +1,14 @@
+.tech h1 {
+  border: 2px solid black;
+  padding: 18px 45px;
+  margin-bottom: 3px;
+  text-align: center;
+  border-radius: 10px;
+  font-weight: 700;
+  color: black;
+  box-shadow: 0 0 5px black;
+}
+
 .mission-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
