--- a/src/styles/ContactModal.css
+++ b/src/styles/ContactModal.css
@@ -17,5 +17,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  flex-wrap: wrap;
+  text-wrap: wrap;
   justify-content: space-around;
 }
