--- a/src/styles/HomeContent.css
+++ b/src/styles/HomeContent.css
@@ -1,3 +1,25 @@
+/* Scrollbar for WebKit browsers */
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #b3b3b3;
+  border-radius: 6px;
+  border: 3px solid #e0e0e0;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #808080;
+}
+
+/* Scrollbar for Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #b3b3b3 #e0e0e0;
+}
+
 .tech h1 {
   border: 2px solid black;
   padding: 18px 45px;
