--- a/src/styles/HomeContent.css
+++ b/src/styles/HomeContent.css
@@ -6,9 +6,9 @@
   background: #e0e0e0;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #b3b3b3;
+  background-color: blue;
   border-radius: 6px;
-  border: 3px solid #e0e0e0;
+  border: 3px solid blue;
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: #808080;
