--- a/src/styles/HomeContent.css
+++ b/src/styles/HomeContent.css
@@ -3,15 +3,16 @@
   width: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: #e0e0e0;
+  background: blue;
 }
 ::-webkit-scrollbar-thumb {
   background-color: blue;
   border-radius: 6px;
   border: 3px solid blue;
 }
+
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #808080;
+  background-color: blue;
 }
 
 /* Scrollbar for Firefox */
