--- a/src/styles/HomeContent.css
+++ b/src/styles/HomeContent.css
@@ -23,7 +23,7 @@
 /* Scrollbar for Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #b3b3b3 #e0e0e0;
+  scrollbar-color: #e0e0e0 #e0e0e0;
 }
 
 .tech h1 {
